--- a/app/src/main/res/menu-v14/main.xml
+++ b/app/src/main/res/menu-v14/main.xml
@@ -1,40 +1,33 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:pendulumstudio="http://schemas.android.com/apk/res-auto">
-
-    <!-- <item
-        android:id="@+id/menu_item_share"
-        android:title="@string/share"
-        android:actionProviderClass="android.widget.ShareActionProvider"
-        android:showAsAction="ifRoom"/> -->
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/menu_item_share"
-        android:title="@string/share"
         android:icon="@android:drawable/ic_menu_share"
-        android:showAsAction="ifRoom"/>
+        android:showAsAction="ifRoom"
+        android:title="@string/share" />
 
     <item
         android:id="@+id/action_settings"
-        android:orderInCategory="100"
         android:icon="@android:drawable/ic_menu_preferences"
-        android:title="@string/settings"
-        android:showAsAction="never"/>
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/settings" />
     <item
         android:id="@+id/action_rate"
-        android:orderInCategory="100"
         android:icon="@drawable/ic_action_rate"
-        android:title="@string/google_play"
-        android:showAsAction="never"/>
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/github" />
     <item
         android:id="@+id/action_information"
-        android:orderInCategory="100"
         android:icon="@android:drawable/ic_menu_info_details"
-        android:title="@string/information"
-        android:showAsAction="never"/>
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/information" />
     <!--    android:showAsAction="never"  -->
     <!--   <item
            android:id="@+id/action_about"
            android:orderInCategory="100"
            android:title="@string/about"/> -->
 
-   </menu>
+</menu>
