--- a/app/src/main/res/menu/springpendulum3d.xml
+++ b/app/src/main/res/menu/springpendulum3d.xml
@@ -14,7 +14,7 @@
     <item
         android:id="@+id/action_rate"
         android:icon="@drawable/ic_action_rate"
-        android:title="@string/google_play"/>
+        android:title="@string/github"/>
     <item
         android:id="@+id/action_information"
         android:icon="@android:drawable/ic_menu_info_details"
