--- a/app/src/main/res/layout/information.xml
+++ b/app/src/main/res/layout/information.xml
@@ -119,7 +119,7 @@
                     android:gravity="center">
 
                     <TextView
-                        android:id="@+id/google_play"
+                        android:id="@+id/github"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
