--- a/app/src/main/res/menu/mathematicalpendulum.xml
+++ b/app/src/main/res/menu/mathematicalpendulum.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/MP_parameters"
-        android:icon="@android:drawable/ic_menu_preferences"
-        android:title="@string/label_param"/>
     <item
-        android:id="@+id/action_rate"
-        android:icon="@drawable/ic_action_rate"
-        android:title="@string/github"/>
+        android:id="@+id/MP_parameters"
+        android:icon="@android:drawable/ic_menu_preferences"
+        android:title="@string/label_param" />
     <item
         android:id="@+id/action_information"
         android:icon="@android:drawable/ic_menu_info_details"
-        android:title="@string/information"/>
+        android:title="@string/information" />
 </menu>
