--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,7 +20,7 @@
         <item name="android:windowNoTitle">true</item>
     </style>
 
-    <style name="WallpaperSettings" parent="@android:style/Theme">
+    <style name="WallpaperSettings" parent="Theme.AppCompat.Dialog">
         <item name="android:windowBackground">@android:drawable/screen_background_dark_transparent</item>
         <item name="android:colorBackgroundCacheHint">@null</item>
         <item name="android:windowIsTranslucent">true</item>
@@ -31,7 +31,7 @@
          Theme for a wallpaper's setting activity that is designed to be on
          top of a light background.
     -->
-    <style name="WallpaperSettingsLight" parent="@android:style/Theme.Light">
+    <style name="WallpaperSettingsLight" parent="Theme.AppCompat.Light.Dialog">
         <item name="android:windowBackground">@android:drawable/screen_background_light_transparent</item>
         <item name="android:colorBackgroundCacheHint">@null</item>
         <item name="android:windowIsTranslucent">true</item>
