chore: completely destroy code by refactoring everything

--- a/app/libs/ColorPickerLibrary/src/main/res/layout-land/dialog_color_picker.xml
+++ b/app/libs/ColorPickerLibrary/src/main/res/layout-land/dialog_color_picker.xml
@@ -2,20 +2,20 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:paddingBottom="10dp"
     android:paddingLeft="10dp"
+    android:paddingTop="10dp"
     android:paddingRight="10dp"
-    android:paddingTop="10dp" >
+    android:paddingBottom="10dp">
 
     <!-- We set the id on this layout so we in the ColorPickerDialog class can identify if the landscape or portrait layout has been loaded. -->
     <LinearLayout
         android:id="@id/dialog_color_picker_extra_layout_landscape"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <afzkl.development.colorpickerview.view.ColorPickerView
             android:id="@id/color_picker_view"
@@ -26,8 +26,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:orientation="vertical"
-            android:layout_marginLeft="14dp" >
+            android:layout_marginLeft="14dp"
+            android:orientation="vertical">
 
             <afzkl.development.colorpickerview.view.ColorPanelView
                 android:id="@id/color_panel_old"
@@ -39,8 +39,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
                 android:includeFontPadding="false"
-                android:paddingBottom="5dp"
                 android:paddingTop="5dp"
+                android:paddingBottom="5dp"
                 android:text="↓"
                 android:textColor="#ffffff"
                 android:textSize="16sp" />
