--- a/app/libs/ColorPickerLibrary/src/main/res/values/ids.xml
+++ b/app/libs/ColorPickerLibrary/src/main/res/values/ids.xml
@@ -1,9 +1,9 @@
 <resources>
-    
-    <item type="id" name="color_picker_view" />
-    <item type="id" name="color_panel_old" />
-    <item type="id" name="color_panel_new" />
-    <item type="id" name="preference_preview_color_panel" />
-    <item type="id" name="dialog_color_picker_extra_layout_landscape" />
-    
+
+    <item name="color_picker_view" type="id" />
+    <item name="color_panel_old" type="id" />
+    <item name="color_panel_new" type="id" />
+    <item name="preference_preview_color_panel" type="id" />
+    <item name="dialog_color_picker_extra_layout_landscape" type="id" />
+
 </resources>
